--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,11 +3,13 @@ on: [push]
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    name: A job to say hello on mine
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Hello world action step
         id: hello
-        uses: actions/hello-world-docker-action@v1
+        uses: ./
         with:
           who-to-greet: 'Mona the Octocat'
       # `hello` ステップからの出力を使用する
