--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,11 +5,12 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello on mine
     steps:
-      # - name: Checkout
-      #   uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Hello world action step
         id: hello
-        uses: stNamco/github-comment-slack-channeler@v1
+        # uses: stNamco/github-comment-slack-channeler@v1
+        uses: ./
         with:
           slack_bot_token: 'test slack_bot_token'
           slack_channel_id: 'test slack_channel_id'
