--- a/action.yml
+++ b/action.yml
@@ -1,26 +1,33 @@
-name: 'Hello World'
-description: 'Greet someone and record the time'
+name: 'github-comment-slack-channeler'
+description: 'A job to share github comment as unfurl'
 inputs:
   slack_bot_token:
-    description: 'test0'
+    description: 'slack bot token'
     required: true
   slack_channel_id:
-    description: 'test1'
+    description: 'slack channel id'
     required: true
-  comment_url_text:
-    description: 'test2'
+  comment_url:
+    description: 'github url of the comment'
     required: true
-  slack_channeler_github_token:
-    description: 'test3'
+  comment_body:
+    description: 'github comment'
     required: true
-# outputs:
-#   time: # id of output
-#     description: 'The time we greeted you'
+  comment_author_icon_url:
+    description: 'github comment'
+    required: false
+    default: "https://user-images.githubusercontent.com/11131753/141990632-3de3aef0-083a-4a9c-9075-b9af4fa306c6.png"
+  comment_author_name:
+    description: 'github comment author'
+    default: 'github-comment-slack-channeler'
+    
 runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
     - ${{ inputs.slack_bot_token }}
     - ${{ inputs.slack_channel_id }}
-    - ${{ inputs.comment_url_text }}
-    - ${{ inputs.slack_channeler_github_token }}
+    - ${{ inputs.comment_url }}
+    - ${{ inputs.comment_body }}
+    - ${{ inputs.comment_author_icon_url }}
+    - ${{ inputs.comment_author_name }}
