--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to share github comment as unfurl
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: unfurl action step
         id: unfurl_comment
-        if: contains(github.event.comment.body, '/share')
-        uses: stNamco/github-comment-slack-channeler@6f9fa0f51c8b9abfb055b434ade21f6a88903bdc
+        uses: ./
+        # if: contains(github.event.comment.body, '/share')
+        # uses: stNamco/github-comment-slack-channeler@6f9fa0f51c8b9abfb055b434ade21f6a88903bdc
         with:
           slack_bot_token: 'value-slack_bot_token'
           slack_channel_id: 'value-slack_channel_id'
