--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,13 +12,13 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to share github comment as unfurl
     steps:
-      # - name: Checkout
-      #   uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: unfurl action step
         id: unfurl_comment
-        # uses: ./
+        uses: ./
         # if: contains(github.event.comment.body, '/share')
-        uses: stNamco/github-comment-slack-channeler@9315f464b53d0f279930b49e72c5f246f1070177
+        # uses: stNamco/github-comment-slack-channeler@9315f464b53d0f279930b49e72c5f246f1070177
         with:
           slack_bot_token: 'value-slack_bot_token'
           slack_channel_id: 'value-slack_channel_id'
