--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        ref: 'ee0006d6780c585c14937ad7ecebbbc9923a1494'
       - name: unfurl action step
         id: unfurl_comment
         uses: ./
