--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: unfurl action step
         id: unfurl_comment
         if: contains(github.event.comment.body, '/share')
-        uses: stNamco/github-comment-slack-channeler@v0.0.2
+        uses: stNamco/github-comment-slack-channeler@2046657ff8eb01ce06f807fa5c6804e130d5405f
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           slack_bot_token: ${{ secrets.SLACK_BOT_TOKEN }}
